--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,8 @@ description:         Please see the README on GitHub at <https://github.com/jlam
 
 dependencies:
 - base >= 4.7 && < 5
+- base16-bytestring >= 0.1.1.6 && < 0.2
+- bytestring
 
 ghc-options:
 - -Wall
