--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,7 @@ description:         Please see the README on GitHub at <https://github.com/jlam
 dependencies:
 - base >= 4.7 && < 5
 - base16-bytestring >= 0.1.1.6 && < 0.2
+- text >= 1.2.3.1 && < 1.3
 - bytestring
 
 ghc-options:
